Bug 1354529: Don't set constructor-flag for generator functions created through GeneratorFunction intrinsic. r=arai